help: Fix left sidebar content in smaller window.
This fixes an issue where some of the content of left
sidebar gets visible even in smaller window which looks ugly.

Fixes: #10898.

--- a/static/styles/portico.scss
+++ b/static/styles/portico.scss
@@ -1846,10 +1846,17 @@ input.new-organization-button {
         transition: all 0.3s ease;
     }
 
+    .help .sidebar .content:not(.show) {
+        visibility: hidden;
+    }
+
     .app.help .sidebar.show {
         pointer-events: initial;
         transform: translateX(calc(100% - 50px));
         overflow: auto;
+        .content {
+            visibility: visible;
+        }
     }
 
     .app.help .sidebar.show + .hamburger {
